<resources>
    //Start of junk data
        <string name="app_name">ReVA</string>
        <string name="welcome">Welcome</string>
        <string name="patient0_gmail_com">patient0@gmail.com</string>
        <string name="_12345">12345</string>
        <string name="textview">TextView</string>
        <string name="_15_la_vue_wierda_glen">15 La Vue, Wierda Glen</string>
        <string name="charles123">Charles123</string>
        <string name="radiobutton">RadioButton</string>
        <string name="radiobutton2">RadioButton</string>
        <string name="researcher">RadioButton</string>
        <string name="famimly">RadioButton</string>
        <string name="title_activity_main">MainActivity</string>
        <string name="action_settings">Settings</string>
        <string name="section_format">Hello World from section: %1$d</string>
        <string name="title_activity_main_screen">MainScreenActivity</string>
        <string name="_45">45</string>
        <string name="string_45" />
        <string name="_1_72">1.72</string>
        <string name="_65_5">65.5</string>
        <string name="radiobuttonAge">RadioButton</string>
        <string name="radiobuttonIllness">RadioButton</string>
        <string name="radiobuttonAccident">RadioButton</string>
        <string name="radiobuttonDisability">RadioButton</string>
        <string name="reason_for_being_bedridden">Reason for Being Bedridden:</string>
        <string name="_46">45</string>
    <string name="_85bpm">85bpm</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="heart_rate_image">Heart Rate Image</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="_85">val</string>
    <string name="_bpm">unit</string>
    <string name="value">85</string>
    <string name="unit">bpm</string>
    //End of junk data

    //Start of Real Time Mock Data
    <string-array name="aboveText">
        <item>"Heart Rate"</item>
        <item>"Blood Pressure"</item>
        <item>"Temperature"</item>
    </string-array>

    <string-array name="blood_pressure_higher">
        <item>"80"</item>
        <item>"120"</item>
        <item>"140"</item>
        <item>"160"</item>
        <item>"180"</item>
    </string-array>

    <string-array name="blood_pressure_lower">
        <item>"60"</item>
        <item>"80"</item>
        <item>"90"</item>
        <item>"100"</item>
        <item>"110"</item>
    </string-array>

    <string-array name="heart_rate">
        <item>"80"</item>
        <item>"75"</item>
        <item>"92"</item>
        <item>"60"</item>
        <item>"87"</item>
    </string-array>

    <string-array name="temperature">
        <item>"36.5"</item>
        <item>"37"</item>
        <item>"35.4"</item>
        <item>"34.6"</item>
        <item>"38"</item>
    </string-array>
    //End of Real Time Mock Data

    //Start of Statistical Mock Data
    <string-array name="minimums">
        <item>"62"</item>
        <item>"120"</item>
        <item>"34"</item>
    </string-array>

    <string-array name="maximums">
        <item>"92"</item>
        <item>"160"</item>
        <item>"37.5"</item>
    </string-array>

    <string-array name="averages">
        <item >"73"</item>
        <item >"140"</item>
        <item >"35"</item>
    </string-array>
    //End of Statistical Mock Data

    //Start of Notification Mock Data
    <string-array name="titles">
        <item>"Heart Rate"</item>
        <item>"Blood Pressure"</item>
        <item>"Temperature"</item>
    </string-array>

    <string-array name="content">
        <item>"Heart rate sensor has reported strong deviations from the norm, please seek medical assistance immediately."</item>
        <item>"Blood pressure sensor has reported moderate deviations from the norm, please seek medical assistance promptly."</item>
        <item>"Body temperature sensor has reported slight deviations from the norm, please check up on the patient."</item>
    </string-array>

    <string-array name="colour">
        <item>"Red"</item>
        <item>"Yellow"</item>
        <item>"White"</item>
    </string-array>
</resources>
