<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reva.loop301.reva.Login"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/txt_subscribePass"
        android:layout_width="297dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@+id/input_confirmPassReg"
        android:text="@string/textview"
        android:textColor="@android:color/background_dark"
        tools:ignore="LabelFor,RtlHardcoded"
        tools:text="Password to Subscribe to Patient:"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/input_subToPatientPass"
        android:layout_marginTop="61dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="42dp"
        app:layout_constraintLeft_toLeftOf="@+id/input_subToPatientPass"
        app:layout_constraintTop_toTopOf="@+id/input_whoSub" />

    <EditText
        android:id="@+id/input_subToPatientPass"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/_12345"
        android:inputType="textPassword"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/txt_whoSub"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="132dp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_whoSub" />

    <EditText
        android:id="@+id/txt_whoSub"
        android:layout_width="0dp"
        android:layout_height="102dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@+id/input_whoSub"
        android:maxLines="2"
        android:text="@string/textview"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@android:color/background_dark"
        android:textIsSelectable="false"
        tools:ignore="RtlHardcoded"
        tools:text="To Whom Are You Subscribing? Please Type in Either Their E-Mail or User Name"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/input_subToPatientPass"
        app:layout_constraintRight_toRightOf="@+id/radioGroupReg5"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="103dp"
        app:layout_constraintLeft_toLeftOf="@+id/input_whoSub"
        android:layout_marginRight="3dp" />

    <EditText
        android:id="@+id/txt_register"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@id/txt_userMailReg"
        android:maxLines="1"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textIsSelectable="false"
        tools:background="@android:color/holo_blue_dark"
        tools:ignore="LabelFor"
        tools:text="Registration"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_whoSub"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/charles123"
        android:inputType="textWebEmailAddress"
        android:selectAllOnFocus="false"
        android:layout_marginStart="31dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/input_subToPatientPass"
        android:layout_marginTop="101dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="105dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_whoSub"
        android:layout_marginLeft="31dp" />

    <EditText
        android:id="@+id/txt_Title"
        android:layout_width="299dp"
        android:layout_height="43dp"
        android:layout_marginStart="31dp"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@+id/input_passwordReg"
        android:text="@string/textview"
        android:textColor="@android:color/background_dark"
        tools:ignore="LabelFor,RtlHardcoded"
        tools:text="What is Your Relation to the Patient?"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="98dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="31dp" />

    <Button
        android:id="@+id/btn_patRegCont"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="252dp"
        android:layout_height="48dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/textview"
        tools:ignore="RtlHardcoded"
        tools:text="Register"
        android:layout_marginStart="31dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="31dp"
        android:onClick="registerSub"/>


    <RadioGroup
        android:id="@+id/radioGroupReg4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupReg5"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/radioGroupReg5">

        <RadioButton
            android:id="@+id/rad_researcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/researcher"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="167dp"
            tools:text="Researcher" />

        <RadioButton
            android:id="@+id/rad_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/radiobutton2"
            tools:layout_editor_absoluteX="168dp"
            tools:layout_editor_absoluteY="167dp"
            tools:text="Doctor" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupReg5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/txt_Title"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txt_Title">

        <RadioButton
            android:id="@+id/rad_family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="135dp"
            tools:text="Family" />

        <RadioButton
            android:id="@+id/rad_caretaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:text="@string/radiobutton"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="134dp"
            tools:text="Caretaker" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>
