<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reva.loop301.reva.Login"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/txt_register"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@id/txt_userMailReg"
        android:maxLines="1"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textIsSelectable="false"
        tools:background="@android:color/holo_blue_dark"
        tools:ignore="LabelFor"
        tools:text="Registration"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txt_age"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="19dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_patRegDone"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/textview"
        tools:ignore="RtlHardcoded"
        tools:text="Register"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="31dp"
        android:onClick="registerPatient"/>

    <EditText
        android:id="@+id/txt_age"
        android:layout_width="46dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@+id/input_age"
        android:text="@string/textview"
        android:textColor="@android:color/background_dark"
        tools:text="Age:"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txt_height"
        android:layout_marginTop="58dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="60dp"
        app:layout_constraintLeft_toLeftOf="@+id/input_age"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/_46"
        android:inputType="number"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/input_height"
        android:layout_marginTop="100dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/input_height"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_weight"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@+id/input_weight"
        android:text="@string/textview"
        android:textColor="@android:color/background_dark"
        tools:ignore="TextFields"
        tools:text="Weight (in kg): "
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/input_weight"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/input_height"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/input_weight" />

    <EditText
        android:id="@+id/input_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/_65_5"
        android:inputType="numberDecimal"
        android:layout_marginStart="31dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/txt_weight"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="31dp" />

    <EditText
        android:id="@+id/txt_height"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@+id/input_height"
        android:text="@string/textview"
        android:textColor="@android:color/background_dark"
        tools:ignore="TextFields"
        tools:text="Height (in meters):"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txt_weight"
        android:layout_marginTop="60dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="59dp"
        app:layout_constraintLeft_toLeftOf="@+id/input_height"
        app:layout_constraintTop_toTopOf="@+id/input_age" />

    <EditText
        android:id="@+id/input_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/_1_72"
        android:inputType="number|numberDecimal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txt_weight"
        android:layout_marginTop="57dp"
        app:layout_constraintTop_toBottomOf="@+id/input_age"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txt_weight" />

    <EditText
        android:id="@+id/txt_reason"
        android:layout_width="236dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@+id/input_height"
        android:text="@string/reason_for_being_bedridden"
        android:textColor="@android:color/background_dark"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="200dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="201dp"
        app:layout_constraintLeft_toLeftOf="@+id/input_weight"
        app:layout_constraintTop_toTopOf="@+id/txt_height" />

    <RadioGroup
        android:id="@+id/radioGroupReg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/txt_reason"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txt_reason">

        <RadioButton
            android:id="@+id/rad_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobuttonAge"
            tools:text="Age" />

        <RadioButton
            android:id="@+id/rad_illness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            tools:text="Illness" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupReg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupReg2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/radioGroupReg2">

        <RadioButton
            android:id="@+id/rad_accident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Accident" />

        <RadioButton
            android:id="@+id/rad_disability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            tools:text="Disability"
            android:layout_marginStart="10dp" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>
