<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reva.loop301.reva.Login"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/txt_userMailReg"
        android:layout_width="139dp"
        android:layout_height="45dp"
        android:layout_marginStart="31dp"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@+id/input_emailReg"
        android:maxLines="1"
        android:text="@string/textview"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@android:color/background_dark"
        android:textIsSelectable="false"
        tools:ignore="RtlHardcoded"
        tools:text="E-Mail Address:"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/input_emailLogin"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="31dp"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txt_welcome"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@id/txt_userMailReg"
        android:maxLines="1"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textIsSelectable="false"
        tools:background="@android:color/holo_blue_dark"
        tools:ignore="LabelFor"
        tools:text="Welcome To ReVA"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_emailLogin"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/patient0_gmail_com"
        android:inputType="textWebEmailAddress"
        android:selectAllOnFocus="false"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="193dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txt_userMailReg"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="0dp"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/txt_PassReg"
        android:layout_width="93dp"
        android:layout_height="45dp"
        android:layout_marginStart="31dp"
        android:ems="10"
        android:inputType="none"
        android:labelFor="@+id/input_passwordReg"
        android:text="@string/textview"
        android:textColor="@android:color/background_dark"
        tools:ignore="LabelFor,RtlHardcoded"
        tools:text="Password:"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/input_passwordLogin"
        android:layout_marginTop="62dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="53dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_emailLogin"
        android:layout_marginLeft="31dp"
        app:layout_constraintVertical_bias="0.115" />

    <EditText
        android:id="@+id/input_passwordLogin"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/_12345"
        android:inputType="textPassword"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="2dp"
        app:layout_constraintRight_toRightOf="@+id/input_emailLogin"
        android:layout_marginTop="74dp"
        app:layout_constraintTop_toBottomOf="@+id/input_emailLogin"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txt_PassReg"
        android:layout_marginRight="2dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btn_register"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="246dp"
        android:layout_height="49dp"
        android:layout_marginStart="31dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/textview"
        tools:ignore="RtlHardcoded"
        tools:text="Login"
        android:onClick="attemptLogin"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtview_register"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="31dp" />

    <TextView
        android:id="@+id/txtview_register"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        tools:text="Don't have a login? Click here to register"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/btn_register"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="181dp"
        app:layout_constraintLeft_toLeftOf="@+id/btn_register"
        android:onClick="toRegistration"/>

</android.support.constraint.ConstraintLayout>
